views/artworks/_form.html.erb の画像の位置、公開設定を修正

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -11,6 +11,7 @@ ja:
         caption: "ひとこと"
         created_date: "作った時期"
         is_published: "公開設定"
+        creator: "クリエイター"
       creator:
         name: "名前"
         icon: "アイコン"
