サインアップ画面を作成

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -22,5 +22,5 @@ ja:
         content: "内容"
         current_password: "現在のパスワード"
         password: "パスワード"
-        password_confirmation: "確認用パスワード"
+        password_confirmation: "パスワード(確認用)"
         remember_me: "ログインを記憶"
