--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -118,7 +118,7 @@ ja:
       exclusion: は予約されています
       greater_than: は%{count}より大きい値にしてください
       greater_than_or_equal_to: は%{count}以上の値にしてください
-      inclusion: は一覧にありません
+      inclusion: がありません
       invalid: は不正な値です
       less_than: は%{count}より小さい値にしてください
       less_than_or_equal_to: は%{count}以下の値にしてください
